2009-04-02  Dan Winship  <danw@gnome.org>

	Bug 576760 – soup_message_headers_get_content_type returns bad headers

	* libsoup/soup-message-headers.c (soup_message_headers_get_one)
	(soup_message_headers_get_list): New replacements for
	soup_message_headers_get(), indicating explicitly whether the
	caller expects the header to be a list or not; for non-list-type
	headers, if there's more than one, the second one should be
	ignored rather than concatenated to the first.
	(soup_message_headers_get): deprecate this.

	* libsoup/*.c:
	* tests/*.c: Update to use soup_message_headers_get_one() or
	_get_list() as appropriate.

	* tests/header-parsing.c (do_content_type_tests): Add some tests
	of Content-Type parsing/setting, including making sure that
	duplicate Content-Type headers are ignored.

	* docs/reference/libsoup-2.4-sections.txt: update

2009-03-27  Dan Winship  <danw@gnome.org>

	Bug 576583 – Tests fail if "localhost" resolves to ::1

	* tests/*.c: Use "127.0.0.1" in URIs rather than "localhost",
	since the default SoupServer config only listen on IPv4 (qv bug
	522519), and tests/httpd.conf.in only configures apache to listen
	on IPv4, and we don't handle multiple IP addresses (qv bug 526321)
	but the machine might be configured to return "::1" rather than
	"127.0.0.1" first for "localhost". Patch from Andreas Rottmann.

2009-03-27  Dan Winship  <danw@gnome.org>

	* libsoup/soup-cookie.c (soup_cookie_new): Fix docs to not claim
	that the cookie domain can be %NULL. Add some g_return_if_fail()s.

2009-03-27  Dan Winship  <danw@gnome.org>

	* docs/reference/client-howto.xml: clarify that SoupSessionAsync
	is not thread-safe, and that setting a non-default GMainContext on
	a non-threadsafe object means you can only use that object from
	that GMainContext's thread.

2009-03-26  Milan Crha  <mcrha@redhat.com>

	Bug 574957 - soup-session-sync doesn't unlock mutex on proxy error

	* libsoup/soup-session-sync.c: (wait_for_connection):